<resources>
    <string name="app_name">Ratatouille</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="license">License</string>
    <string name="share_app">Share App</string>
    <string name="more_app">More App</string>
    <string name="language">Language</string>
    <string name="clear_cache">Clear Cache</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">blank</string>
    <string name="title_activity_map_app">Map</string>
    <string name="toolbarname">Rotatouille -World Cuisines</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="breakfast_btn">Breakfast</string>
    <string name="desserts_btn">Desserts</string>
    <string name="lunch_btn">Lunch</string>
    <string name="snacks_btn">Snacks</string>
</resources>
