<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#eeeeee"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">
            <TextView
                android:textSize="16sp"
                android:textColor="#7b090909"
                android:id="@+id/clear_cache"
                android:layout_width="-1dp"
                android:layout_height="-2dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:text="@string/clear_cache" />
            <View android:background="#4caf50"
                android:layout_width="-1dp"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp" />
            <TextView android:textSize="16sp"
                android:textColor="#7b090909"
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="-2dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:text="Notifications ON" />
            <View android:background="#4caf50"
                android:layout_width="-1dp"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp" />
            <TextView android:textSize="16sp"
                android:textColor="#7b090909"
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:text="@string/language" />
            <View android:background="#4caf50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp" />
            <TextView android:textSize="16sp"
                android:textColor="#7b090909"
                android:id="@+id/more_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:text="@string/more_app" />
            <View android:background="#4caf50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp" />
            <TextView android:textSize="16sp"
                android:textColor="#7b090909"
                android:id="@+id/share_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:text="@string/share_app" />

            <View android:background="#4caf50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp" />


        </LinearLayout>

 </LinearLayout>

    </ScrollView>
