<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ashutoshdwivedi.ratatouilleworldcuisines.HomeFragment">

   <Button
       android:layout_width="170dp"
       android:layout_height="47dp"
       android:layout_alignParentTop="true"
       android:text="@string/breakfast_btn"
       android:id="@+id/breakfast_btn"
       android:background="@color/breakfastbtn"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginBottom="8dp"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="8dp"
       android:layout_marginLeft="24dp"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_marginRight="24dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"
       app:layout_constraintVertical_bias="0.522" />

   <Button
       android:layout_width="168dp"
       android:layout_height="46dp"
       android:layout_alignParentTop="true"
       android:text="@string/lunch_btn"
       android:id="@+id/lunch_btn"
       android:background="@color/lunchbtn"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginBottom="8dp"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="8dp"
       app:layout_constraintVertical_bias="0.657"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_marginRight="24dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"
       tools:ignore="RtlHardcoded" />
   <Button
       android:layout_width="154dp"
       android:layout_height="50dp"
       android:layout_alignParentTop="true"
       android:text="@string/snacks_btn"
       android:id="@+id/snacks_btn"
       android:background="@color/snacksbtn"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginBottom="8dp"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="8dp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_marginRight="8dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintHorizontal_bias="1.0"
       android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"
       app:layout_constraintVertical_bias="0.525" />
   <Button
       android:layout_width="152dp"
       android:layout_height="44dp"
       android:layout_alignParentTop="true"
       android:text="@string/desserts_btn"
       android:background="@color/dinnerkbtn"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginBottom="8dp"
       android:id="@+id/dinner_btn"
       android:layout_marginLeft="24dp"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"
       android:layout_marginTop="8dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.657"
       android:layout_marginRight="24dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintHorizontal_bias="1.0"
       tools:layout_editor_absoluteY="305dp"
       tools:layout_editor_absoluteX="208dp" />


    <com.daimajia.slider.library.Indicators.PagerIndicator
        android:id="@+id/custom_indicator2"
        style="@style/AndroidImageSlider_Corner_Oval_Orange"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:gravity=""
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="379dp"
        android:layout_height="233dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="162dp"
        android:layout_height="102dp"
        app:srcCompat="@drawable/bkf_pmpknbsct"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.77"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="168dp"
        android:layout_height="117dp"
        app:srcCompat="@drawable/lunch_tacosp"
        app:layout_constraintTop_toTopOf="@+id/snacks_btn"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.791"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.476"
        tools:layout_editor_absoluteY="361dp"
        tools:layout_editor_absoluteX="197dp"
        tools:ignore="ContentDescription" />


</android.support.constraint.ConstraintLayout>
